Changed image source

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section id="o-mnie" class="section section--main section--dark">
       <div class="container">
         <div class="section__inner">
-          <img src="https://i.postimg.cc/PfyRWsH0/Profilowe.jpg" class="section__image" alt="Alicja Orlik" />
+          <img src="images/Profilowe.jpg" class="section__image" alt="Alicja Orlik" />
           <div>
             <h2 class="section__header">
               Alicja Orlik
