Open Graph image to share added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Alicja Orlik</title>
+  <meta property="og:image" content="images/share.png">
   <meta name="title" property="og:title" content="Alicja Orlik" />
   <meta name="description" content="Tłumacz i nauczyciel języka niemieckiego" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
