--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Alicja Orlik</title>
+  <link rel="icon" href="images/icon.svg">
   <meta property="og:image" content="images/share.png">
   <meta name="title" property="og:title" content="Alicja Orlik" />
   <meta name="description" content="Tłumacz i nauczyciel języka niemieckiego" />
